--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pipx install cruft",
+	"remoteUser": "root",
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
